--- a/LesSimpleEfficacesFront/LesSimpleEfficacesFront/LesSimpleEfficacesFront.Android/LesSimpleEfficacesFront.Android.csproj
+++ b/LesSimpleEfficacesFront/LesSimpleEfficacesFront/LesSimpleEfficacesFront.Android/LesSimpleEfficacesFront.Android.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -79,14 +79,14 @@
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\LesSimpleEfficacesFront\LesSimpleEfficacesFront.csproj">
       <Project>{C1CE9792-ECB0-44A0-AF88-4142995BCFDD}</Project>
       <Name>LesSimpleEfficacesFront</Name>
     </ProjectReference>
   </ItemGroup>
-
-
- <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
