--- a/LesSimpleEfficacesFront/LesSimpleEfficacesFront/LesSimpleEfficacesFront/LesSimpleEfficacesFront.csproj
+++ b/LesSimpleEfficacesFront/LesSimpleEfficacesFront/LesSimpleEfficacesFront/LesSimpleEfficacesFront.csproj
@@ -21,7 +21,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Views\LoginView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\MainView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\RegistrationView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
