Ajout view themes + routes

--- a/LesSimpleEfficacesFront/LesSimpleEfficacesFront/LesSimpleEfficacesFront/LesSimpleEfficacesFront.csproj
+++ b/LesSimpleEfficacesFront/LesSimpleEfficacesFront/LesSimpleEfficacesFront/LesSimpleEfficacesFront.csproj
@@ -38,7 +38,13 @@
     <EmbeddedResource Update="Views\RegistrationView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\RouteView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\StatsView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\ThemesView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
