--- a/LesSimpleEfficacesFront/LesSimpleEfficacesFront/LesSimpleEfficacesFront/LesSimpleEfficacesFront.csproj
+++ b/LesSimpleEfficacesFront/LesSimpleEfficacesFront/LesSimpleEfficacesFront/LesSimpleEfficacesFront.csproj
@@ -23,6 +23,9 @@
     <EmbeddedResource Update="Views\AccountView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\DetailsRouteView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\FriendsView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
